--- a/demo-numpy.ipynb
+++ b/demo-numpy.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "# Precision\n",
     "\n",
-    "Sometimes we may wish to set near-zero values to zero. The `precision` argument does that. Any value `abs(value) < precision` is treated as zero.\n",
+    "Sometimes we may wish to set near-zero values to zero. The `precision` argument does that. Only values `abs(value) > precision` are plotted.\n",
     "\n",
     "This argument is compatible with [matplotlib.pyplot.spy()](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.spy.html)'s `precision` parameter.\n",
     "\n",
